# passtrackr

./: README.md  index.html  package.json  run-dev.sh
src-tauri/: .env  .gitignore  Cargo.toml  tauri.conf.json
src-tauri/.sqlx/: query-00ca885524f46fa0dac4db6a8494f5608e67beb43e8d57ae9f17cd2e099029e9.json  query-0b8c56502ccb6b9bb40feb3fe6fa2e37693c67e9c815c9afd80657f4ef5afd2e.json  query-20aa5df961a04c1815c86442232db0a4b31dd897e03be71974edbdf4099c1837.json  query-2b07ee109947cf25cde3494985d6158bf69176442841b9a4d0ff7f2034548f9e.json  query-3414d9143a6ebbd9d43c086c0c2c9f4e435ab059f5cc018f2e68c9b6bcc4bdc3.json  query-398f6ea136d50269275bac2d5b3bb70732a535428838303cbb87ad79a95cee94.json  query-3af517de50636bd9c72aec53143b7d83e6b3359415fe6be2c0a68c4eeea0429c.json  query-490e07dc7117645af3cb3859ade26b41aac97c42ba5cbb86d7e92b088df6c1e3.json  query-4e8d84c258e7d2c03915c588ae2e7b6054c0cabfc9e25e7d0c1e6723ec8339d0.json  query-5355d9fed6f679ba09cbf43221416844d30cd9e0544055792536525d073ad4d2.json  query-64ac6e4b86b44bf1acf38d01084bc3f635aa989f52eb4cf40c9414e64a518f9b.json  query-6d99726a9623f4170a2318da1d6c3c90d5ee0570397528e0931cd9e69beec6d4.json  query-6f2cbca5b7cd5e9fc69a0773f4098662512b9c7eec84be20497870f1111d2d27.json  query-70e99b25e6ba8dc4261e5198d049305aaff05fe077fd589e48f14ec06c53c4e6.json  query-763410987b7bbf5c75291a14445a93d3f2417bf7f6453e14f8c2a17fa3229411.json  query-815e7c45bf33baee6d6c358908b91b2de706f34c9899a659b2766150da3c6742.json  query-8859da5f9a0b732d076f497f4ed2f2faaddb3b8eb10135303eeb7a4e5f3f7b23.json  query-890e84cb447edc174eee6e02526a1ed27c854103ff0d3a29c8c34060c28f3af7.json  query-896b8cd70983e0a8272c65e97bbd6cceede850bd418392d2c4b1a8f9d621ba22.json  query-93dd1ae7680156b42671fb1a6802bc300eb1a456d0997d7220fffb97cbe57379.json  (+20 more)
src-tauri/icons/: icon.icns
src-tauri/src/: api.rs  (+3 more)
(+66 files in other folders)
